@startuml
title Diff rendering and byte comparison
package [src] as C_0016921741234196091272 {
package [core] as C_0012207904346887387097 {
class "TrackedEntry" as C_0001560558435499023390
class C_0001560558435499023390 {
__
+OriginalPath : std::string
+StoredRelativePath : std::string
}
}
package [storage] as C_0017999738198623292114 {
class "StorageManager" as C_0000001151641826262801
class C_0000001151641826262801 {
+StorageManager(std::filesys...) : void
..
+BackupEntry(const core::...) const : void
+GetRegistryPath() const : std::filesystem::path
+GetStorageRoot() const : const std::filesystem::path &
+ResolveStoredPath(const core::...) const : std::filesystem::path
+RestoreEntry(const core::...) const : void
+SetStorageRoot(std::filesys...) : void
__
}
}
package [diff] as C_0012737410907933377154 {
enum "FileStatus" as C_0002489263939565265575
enum C_0002489263939565265575 {
Clean
Modified
MissingOriginal
MissingBackup
}
class "FileStatusResult" as C_0013210955629383350680
class C_0013210955629383350680 {
__
}
class "FileComparator" as C_0004570752702619654424
class C_0004570752702619654424 {
+FileComparator(const storag...) : void
..
+Compare(const core::...) const : FileStatusResult
+CompareAll(const std::v...) const : std::vector<FileStatusResult>
__
}
}
package [utils] as C_0006966483515336780210 {
enum "TerminalColor" as C_0014822155060380475892
enum C_0014822155060380475892 {
Default
Red
Green
Yellow
Cyan
}
class "TerminalStyle" as C_0001227858788528835931
class C_0001227858788528835931 {
+Bold() const : TerminalStyle
{static} +Foreground(TerminalColo...) : TerminalStyle
+GetForeground() const : TerminalColor
+IsBold() const : bool
+IsPlain() const : bool
{static} +Plain() : TerminalStyle
__
}
class "Colorizer" as C_0016296498416031808574
class C_0016296498416031808574 {
+Colorizer(bool enabled...) : void
..
+Apply(std::string_...) const : std::string
{static} +Disabled() : Colorizer
{static} +Enabled() : Colorizer
+IsEnabled() const : bool
__
}
}
}
C_0000001151641826262801 ..> C_0001560558435499023390
C_0013210955629383350680 o-- C_0002489263939565265575 : +Status
C_0013210955629383350680 o-- C_0001560558435499023390 : +Entry
C_0004570752702619654424 ..> C_0001560558435499023390
C_0004570752702619654424 ..> C_0013210955629383350680
C_0004570752702619654424 --> C_0000001151641826262801 : -StorageManager_
C_0001227858788528835931 o-- C_0014822155060380475892 : -Foreground_
C_0016296498416031808574 ..> C_0001227858788528835931

'Generated with clang-uml, version 0.6.2-30-g98728ad
'LLVM version Ubuntu clang version 20.1.8 (0ubuntu4)
@enduml
